[project]
name = "mcp-crash-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "isort>=6.0.1",
    "langchain-google-genai>=2.1.6",
    "langchain-mcp-adapters>=0.1.8",
    "langchain[openai]>=0.3.26",
    "langgraph>=0.5.1",
    "python-dotenv>=1.1.1",
]
